ingress/app-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/[a-z1-9\-]*)$ $1/ redirect;
spec:
  rules:
    - http:
        paths:
          - path: /app(/|$)(.*)
            pathType: Prefix
            backend:
              serviceName: el-github-listener-interceptor
              servicePort: 8080
